--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,10 +46,9 @@
     style='margin-left: 0px !important;'>
     
     <div class="wrapper1">
-      <header style="margin-bottom: 0px !important; margin-top: -100px !important;">_</header>
+      <header style="margin-bottom: 0px !important; margin-top: -100px !important;"> </header>
         <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }} "style="margin-bottom: 35px !important;">
-          Pedro Perez
-        </h1>>
+        </h1>
           {{ site.title | default: site.github.repository_name }}
         </h1>
 
