--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
     style='margin-left: 0px !important;'>
     
     <div class="wrapper1">
-      <header style="margin-bottom: 0px !important; margin-top: -100px !important;"> </header>
+      <header style="margin-bottom: 0px !important; margin-top: -100px !important;">
         <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }} "style="margin-bottom: 35px !important;">
         </h1>
           {{ site.title | default: site.github.repository_name }}
