--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  {% seo %}
+    {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     {% include head-custom.html %}
-    
-<!--     {%- include head.html -%}
-     -->
     <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
     <style>
         body {
@@ -40,92 +36,67 @@
             color: white;
             background-color: black;
         }
+        #theme-toggle {
+            position: fixed;
+            top: 25%; /* Adjust vertical position as needed */
+            right: 1rem; /* Adjust horizontal position as needed */
+            z-index: 1000;
+            padding: 0.25rem; /* Adjust padding to make button smaller */
+            background-color: transparent; /* Make background transparent */
+            border: none;
+            cursor: pointer;
+        }
+        #theme-toggle img {
+            width: 24px; /* Adjust icon size */
+            height: 24px;
+        }
+        #theme-toggle:hover {
+            background-color: rgba(0, 0, 0, 0.1); /* Example background color on hover */
+        }
     </style>
 </head>
-<body class="light-theme" 
-    style='margin-left: 0px !important;'>
-    
+<body class="light-theme">
     <div class="wrapper1">
-      <header style="margin-bottom: 0px !important; margin-top: -100px !important;">
-        <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }} "style="margin-bottom: 35px !important;">
-          {{ site.title | default: site.github.repository_name }}
-        </h1>
-
-        {% if site.logo %}
-        <button id="theme-toggle" style="right: 600px !important;">
-          <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
-          <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
-        </button>
-        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !important; margin-bottom: 8px !important;" />
-        {% endif %}
-<!--         <h1>{{ site.title }}</h1>
-        <p>{{ site.description }}</p> -->
-
-<!--         <p>{{ site.description | default: site.github.project_tagline }}</p>
- -->    
-        <div class="social-icons" style="width: 560px !important; height: 30px !important;"></div>
-          <a href="https://www.linkedin.com/in/cspeterai/">
-          <img id="light-linkedin" src="assets/img/linkedin-black.png" alt="LinkedIn profile" width="30" height="30" style="margin-right: 7.5px !important; margin-left: 0px !important;">
-          <img id="dark-linkedin" src="assets/img/linkedin-white.png" alt="LinkedIn profile (dark mode)" width="30" height="30" style="margin-right: 7.5px !important; margin-left: 0px !important; display:none;">
-
-          </a>
-  
-          <a href="mailto:cspeteai@outlook.com">
-          <img id="light-email" src="assets/img/email_dark.png" alt="Email me" width="30" height="30" style="margin-right: 7.5px !important;">
-          <img id="dark-email" src="assets/img/email_white.png" alt="Email me (dark mode)" width="30" height="30" style="margin-right: 7.5px !important; display:none;">
-          </a>
-  
-          <a href="https://github.com/peterjps">
-          <img id="light-github" src="assets/img/github-mark.png" alt="Github me" width="30" height="30" style="margin-right: 7.5px !important;">
-          <img id="dark-github" src="assets/img/github-mark-white.png" alt="Github me (dark mode)" width="30" height="30" style="margin-right: 7.5px !important; margin-left: 0px !important; display: none;">
-          </a>
-  
-          <a href="https://discordapp.com/users/@01_peter_">
-          <img id="light-discord" src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30" style="margin-right: 0px !important;">
-          <img id="dark-discord" src="assets/img/icon_clyde_white_RGB.png" alt="Discord me (dark mode)" width="30" height="30" style="margin-right: 0px !important;display:none;">
-          </a>
-          <div>
-<!--         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
- -->
-<!--         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %} -->
-<!-- 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %} -->
-      </header>
-      <section style="bottom: auto !important;
-        margin-bottom: auto !important;
-        margin-top: 0px !important;
-        right: auto !important;
-        margin-right: 0px !important;" 
-      
-      </section>
-        <h1 id="about" class="{% if theme == 'light' %}light-theme{% else %}dark-theme{% endif %}" style="margin-left: 240px !important; margin-bottom: 30px !important;">About</h1>
-        <p>Hey there, I'm an adaptable project manager who's diving headfirst into the world of software engineering and machine learning. I've got a knack for optimizing processes and leading strategic initiatives, and I'm excited to bring my strong analytical skills to tech-driven environments. I'm all about continuous learning and can't wait to see where this journey takes me.</p>
-        <h2 id="projects" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}"style="margin-left: 230px !important; margin-bottom: 30px !important;">Portfolio</h2>
-        <p> <a href="http://localhost:8502" class="custom-link"> • Mortgage Calculator Repayment Web App</a></p>
-        <p> <a href="https://github.com/peterjps/Multi-AI-Agents" class="custom-link"> • Multi-AI Agent System - Financial Analysis </a></p>
-        <p> <a href="https://peterjps.github.io/Peter.ai/" class="custom-link"> • Github WebPage </a></p>
-      </section>
-    
-
-      </section>
-
-
-
-      <footer>
-<!--         {% if site.github.is_project_page %}
-        <p>Copyright by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %} -->
-      </footer>
+        <header style="margin-bottom: 0px; margin-top: -100px;">
+            <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }}" style="margin-bottom: 35px;">
+                {{ site.title | default: site.github.repository_name }}
+            </h1>
+            {% if site.logo %}
+            <button id="theme-toggle">
+                <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
+                <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
+            </button>
+            <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px; margin-bottom: 8px;">
+            {% endif %}
+            <div class="social-icons" style="width: 560px; height: 30px;"></div>
+            <a href="https://www.linkedin.com/in/cspeterai/">
+                <img id="light-linkedin" src="assets/img/linkedin-black.png" alt="LinkedIn profile" width="30" height="30" style="margin-right: 7.5px; margin-left: 0;">
+                <img id="dark-linkedin" src="assets/img/linkedin-white.png" alt="LinkedIn profile (dark mode)" width="30" height="30" style="margin-right: 7.5px; margin-left: 0; display:none;">
+            </a>
+            <a href="mailto:cspeteai@outlook.com">
+                <img id="light-email" src="assets/img/email_dark.png" alt="Email me" width="30" height="30" style="margin-right: 7.5px;">
+                <img id="dark-email" src="assets/img/email_white.png" alt="Email me (dark mode)" width="30" height="30" style="margin-right: 7.5px; display:none;">
+            </a>
+            <a href="https://github.com/peterjps">
+                <img id="light-github" src="assets/img/github-mark.png" alt="Github me" width="30" height="30" style="margin-right: 7.5px;">
+                <img id="dark-github" src="assets/img/github-mark-white.png" alt="Github me (dark mode)" width="30" height="30" style="margin-right: 7.5px; margin-left: 0; display: none;">
+            </a>
+            <a href="https://discordapp.com/users/@01_peter_">
+                <img id="light-discord" src="assets/img/icon_clyde_black_RGB.png" alt="Discord me" width="30" height="30" style="margin-right: 0;">
+                <img id="dark-discord" src="assets/img/icon_clyde_white_RGB.png" alt="Discord me (dark mode)" width="30" height="30" style="margin-right: 0;display:none;">
+            </a>
+        </header>
+        <section style="bottom: auto; margin-bottom: auto; margin-top: 0; right: auto; margin-right: 0;">
+            <h1 id="about" class="{% if theme == 'light' %}light-theme{% else %}dark-theme{% endif %}" style="margin-left: 240px; margin-bottom: 30px;">About</h1>
+            <p>Hey there, I'm an adaptable project manager who's diving headfirst into the world of software engineering and machine learning. I've got a knack for optimizing processes and leading strategic initiatives, and I'm excited to bring my strong analytical skills to tech-driven environments. I'm all about continuous learning and can't wait to see where this journey takes me.</p>
+            <h2 id="projects" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}" style="margin-left: 230px; margin-bottom: 30px;">Portfolio</h2>
+            <p> <a href="http://localhost:8502" class="custom-link"> • Mortgage Calculator Repayment Web App</a></p>
+            <p> <a href="https://github.com/peterjps/Multi-AI-Agents" class="custom-link"> • Multi-AI Agent System - Financial Analysis </a></p>
+            <p> <a href="https://peterjps.github.io/Peter.ai/" class="custom-link"> • Github WebPage </a></p>
+        </section>
+        <footer>
+            <!-- Your footer content here -->
+        </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script>
@@ -179,12 +150,11 @@
             }
         }
 
-
-      function getCurrentTheme() {
+        function getCurrentTheme() {
             return document.documentElement.getAttribute('data-theme');
         }
 
-      function toggleTheme() {
+        function toggleTheme() {
             const currentTheme = getCurrentTheme();
             const newTheme = currentTheme === 'light' ? 'dark' : 'light';
             document.documentElement.setAttribute('data-theme', newTheme);
@@ -202,6 +172,7 @@
     </script>
 </body>
 </html>
+
 
 
 
