--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,7 +61,7 @@ body {
 
 /* Default light mode colors */
 :root {
-  --background-color: #ffffff;
+  --background-color: #FCFCFC;
   --text-color: #000000;
   --link-color: black; /* Default link color for light mode */
   --link-hover-color: darkgray; /* Default hover color for light mode */
@@ -69,7 +69,7 @@ body {
 
 /* Dark Mode */
 [data-theme="dark"] {
-  --background-color: #191919;
+  --background-color: #222222;
   --text-color: #f3f4f6;
   --link-color: lightgray; /* Link color for dark mode */
   --link-hover-color: white; /* Hover color for dark mode */
