--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         }
         .dark-theme {
             color: white;
-            background-color: #242424;
+            background-color: black;
         }
         #theme-toggle {
             position: fixed;
