--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,7 @@
             <p><a href="http://localhost:8502" class="custom-link">• Mortgage Calculator Repayment Web App</a></p>
             <p><a href="https://github.com/peterjps/Multi-AI-Agents" class="custom-link">• Multi-AI Agent System - Financial Analysis</a></p>
             <p><a href="https://peterjps.github.io/Peter.ai/" class="custom-link">• Github WebPage</a></p>
+            <p><a href="http://localhost:3000" class="custom-link">• QuantumFund Web App</a></p>
         </section>
         <footer>
             <!-- Your footer content here -->
