--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
         </header>
         <section style="margin-bottom: auto; margin-top: 0;">
             <h1 id="about" class="{% if theme == 'light' %}light-theme{% else %}dark-theme{% endif %}" style="margin-left: 240px; margin-bottom: 30px;">About</h1>
-            <p>Hi there! I’m an adaptable project manager turned software engineer with a focus on iOS development and machine learning. With a strong background in optimizing processes and leading strategic initiatives, I’m passionate about leveraging my analytical skills and embracing continuous learning in the tech world. Excited to explore new opportunities and see where this journey takes me!</p>
+            <p>Hi there! I’m an adaptable project manager turned software engineer with a focus on iOS development and machine learning. With a strong background in optimizing processes and leading strategic initiatives, I’m passionate about leveraging my analytical skills and embracing continuous learning in the tech world. Excited to explore new opportunities and see where this journey takes me.</p>
             <h2 id="projects" class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}" style="margin-left: 230px; margin-bottom: 30px;">Portfolio</h2>
             <p><a href="http://localhost:8502" class="custom-link">• Mortgage Calculator Repayment Web App</a></p>
             <p><a href="https://github.com/peterjps/Multi-AI-Agents" class="custom-link">• Multi-AI Agent System - Financial Analysis</a></p>
